--- a/package.json
+++ b/package.json
@@ -3,13 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "start": "vite"
-  },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "vite": "^2.8.6"
-  }
+  "license": "ISC"
 }
